--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,20 @@
-Click==7.0
-Flask==1.1.1
-itsdangerous==1.1.0
-Jinja2==2.10.1
-MarkupSafe==1.1.1
-Werkzeug==0.15.5
 asn1crypto==0.24.0
 attrs==19.1.0
 Automat==0.7.0
 cffi==1.12.3
+Click==7.0
 constantly==15.1.0
 cryptography==2.7
 cssselect==1.1.0
+Flask==1.1.1
+Flask-Cors==3.0.8
 hyperlink==19.0.0
 idna==2.8
 incremental==17.5.0
+itsdangerous==1.1.0
+Jinja2==2.10.1
 lxml==4.4.1
+MarkupSafe==1.1.1
 parsel==1.5.2
 pyasn1==0.4.6
 pyasn1-modules==0.2.6
@@ -24,10 +24,11 @@ PyHamcrest==1.9.0
 pyOpenSSL==19.0.0
 queuelib==1.5.0
 Scrapy==1.7.3
+selenium==3.141.0
 service-identity==18.1.0
 six==1.12.0
 Twisted==19.7.0
-w3lib==1.21.0
-zope.interface==4.6.0
-selenium==3.141.0
 urllib3==1.25.3
+w3lib==1.21.0
+Werkzeug==0.15.5
+zope.interface==4.6.0
